[package]
name = "dobbybot"
version = "0.1.0"
authors = ["Jason Kölker <jason@koelker.net>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
cached = "0.13"
chrono = "0.4"
env_logger = "0.7.1"
itertools = "0.9"
log = "0.4.0"
serde_json = "1.0"
num-format = "0.4"

[dependencies.serde]
version = "1.0"
features = [
    "derive",
]

[dependencies.tokio]
version = "0.2"
features = [
    "macros",
    "rt-core",
    "sync",
]

[dependencies.serenity]
version = "0.8.6"
git = "https://github.com/acdenisSK/serenity"
branch = "await_next"
default-features = false
features = [
    "cache",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "rustls_backend",
    "standard_framework",
    "utils",
]

[dependencies.reqwest]
version = "0.10"
default-features = false
features = [
    "json",
    "rustls-tls",
]

[dev-dependencies]
rstest = "0.6"
pretty_assertions = "0.6"
